--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </nav>
         <button
-          class="menu-toggle js-open-menu"
+          class="menu-toggle-open js-open-menu"
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
@@ -393,12 +393,12 @@
     
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
+        <svg class="mobile-menu-close-icon"
+          fill="black"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="12"
+          height="12"
         >
           <path
             fill-rule="evenodd"
@@ -409,10 +409,31 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
+        <li><a href="" class="mobile-menu-link">Studio</a></li>
+        <li><a href="" class="mobile-menu-link">Portfolio</a></li>
+        <li><a href="" class="mobile-menu-link">Contacts</a></li>
+      </ul>
+      <ul class="mobile-menu-contact">
+        <li class="mobile-menu-phone">+11 (000) 111-11-11</li>
+      <li class="mobile-menu-mail">info@devstudio.com</li></ul>
+      <ul class="mobile-menu-social">
+        
+        <li class="mobile-menu-icon"><a href="" class="mobile-menu-soclink"><svg class="mobile-icon" width="24" height="24" >
+          <use href="./images/icons.svg#icon-instagram-2"  ></use>
+        </svg></a>
+      </li>
+      <li class="mobile-menu-icon"><a href="" class="mobile-menu-soclink"><svg class="mobile-icon" width="24" height="24">
+        <use href="./images/icons.svg#icon-twitter-1"  ></use>
+      </svg></a>
+    </li>
+    <li class="mobile-menu-icon"><a href="" class="mobile-menu-soclink"><svg class="mobile-icon" width="24" height="24">
+      <use href="./images/icons.svg#icon-facebook-1"  ></use>
+    </svg></a>
+  </li>
+  <li class="mobile-menu-icon"><a href="" class="mobile-menu-soclink"><svg class="mobile-icon" width="24" height="24" >
+    <use href="./images/icons.svg#icon-linkedin-1"  ></use>
+  </svg></a>
+</li>
       </ul>
     </div>
 
