--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
         <li><a href="" class="mobile-menu-link">Portfolio</a></li>
         <li><a href="" class="mobile-menu-link">Contacts</a></li>
       </ul>
+      <div class="mobile-menu-contacts">
       <ul class="mobile-menu-contact">
         <li class="mobile-menu-phone">+11 (000) 111-11-11</li>
       <li class="mobile-menu-mail">info@devstudio.com</li></ul>
@@ -434,7 +435,7 @@
     <use href="./images/icons.svg#icon-linkedin-1"  ></use>
   </svg></a>
 </li>
-      </ul>
+      </ul></div>
     </div>
 
     <script
