--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <svg
             width="24"
             height="24"
-            fill="currentColor"
+            fill="black"
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg"
           >
