--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         
       </div>
       </section>
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="container">
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list">
@@ -288,9 +288,9 @@
         </a></li>
       </ul>
       </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-log-container">
         <a class="footer-logo" href="./index.html">
@@ -332,7 +332,7 @@
       </form></div>
     
   </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button"  class="close-btn-modal" data-modal-close>
