finish hw7 porfolio

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <ul class="team-list list">
             <li class="team-item-list">
               <img
-              srcset="./images/img1-desktop@2x.jpg 2x"
+              srcset="./images/img1@2x.jpg 2x"
                 src="./images/img1.jpg"
                 
                 class="picture"
@@ -180,7 +180,7 @@
             </li>
             <li> 
               <img
-              srcset="./images/img2-desktop@2x.jpg 2x"
+              srcset="./images/img2@2x.jpg 2x"
                 src="./images/img2.jpg"
                 class="picture"
                 alt="TomFord"
@@ -204,7 +204,7 @@
             </li>
             <li>
               <img
-              srcset="./images/img3-desktop@2x.jpg 2x"
+              srcset="./images/img3@2x.jpg 2x"
                 src="./images/img3.jpg"
                 class="picture"
                 alt="CamilaGarcia"
@@ -228,7 +228,7 @@
             </li>
             <li>
               <img
-              srcset="./images/img4-desktop@2x.jpg 2x"
+              srcset="./images/img4@2x.jpg 2x"
                 src="./images/img4.jpg"
                 class="picture"
                 alt="DanielWilson"
@@ -419,8 +419,8 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="" class="mobile-menu-link">Studio</a></li>
-        <li><a href="" class="mobile-menu-link">Portfolio</a></li>
+        <li><a href="./index.html" class="mobile-menu-link">Studio</a></li>
+        <li><a href="./portfolio.html" class="mobile-menu-link">Portfolio</a></li>
         <li><a href="" class="mobile-menu-link">Contacts</a></li>
       </ul>
       <div class="mobile-menu-contacts">
