--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
               clip-rule="evenodd"
             ></path>
-          </svg>
+          </svg><use href="./images/icons.svg#"></use>
         </button></div>
         <address class="address">
           
@@ -419,7 +419,7 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="./index.html" class="mobile-menu-link">Studio</a></li>
+        <li><a href="./index.html" class="mobile-menu-link active">Studio</a></li>
         <li><a href="./portfolio.html" class="mobile-menu-link">Portfolio</a></li>
         <li><a href="" class="mobile-menu-link">Contacts</a></li>
       </ul>
