--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
               clip-rule="evenodd"
             ></path>
-          </svg><use href="./images/icons.svg#"></use>
+          </svg>
         </button></div>
         <address class="address">
           
